stock issue resolved Imported from Changeset 2795

--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -62,14 +62,17 @@
                     <h2 class="head">@Model.Name</h2>
                     <span class="prd_amnt">@ViewBag.CurrencySymbol@Model.SellPrice</span>
                     <div class="availibility">
-                        @if (Model.InventoryStocks.Any(i => i.Available > 0))
+                        @{ var stockAvailable = Ganedata.Core.Services.Inventory.GetStockDetailByProductId(Model.ProductId); }
+                        @if (stockAvailable>0)
                         {
-                            <span>Availability:</span> <br />
-                            @((Model.InventoryStocks.Sum(i => i.Available) <= 10 ? "only " : "") + Model.InventoryStocks.Sum(i => i.Available).ToString("#") + " items left")
+                            <span>Availability:</span>
+                            <br/>
+                            @((stockAvailable <= 10 ? "only " : "") + stockAvailable.ToString("#") + " items left")
                         }
                         else
                         {
-                            <span></span> <br />
+                            <span></span>
+                            <br/>
                             <span>Currently unavailable.</span>
                         }
                     </div>
@@ -157,11 +160,11 @@
                     }
 
                 <div class="footSec">
-                    @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0 && Model.InventoryStocks.Sum(i => i.Available) > 0)
+                    @if (@Model.SellPrice > 0 && @Model.SellPrice.HasValue && @Model.PercentMargin > 0 && stockAvailable > 0)
                     {
                         <div class="qty">
                             <span>quantity</span>
-                            @Html.DropDownList("product-quantity", Enumerable.Range(1, (int)Model.InventoryStocks.Sum(i => i.Available)).Select(i => new SelectListItem { Text = i.ToString(), Value = i.ToString() }), htmlAttributes: new { @class = "form-control" })
+                            @Html.DropDownList("product-quantity", Enumerable.Range(1, (int)stockAvailable).Select(i => new SelectListItem { Text = i.ToString(), Value = i.ToString() }), htmlAttributes: new { @class = "form-control" })
                         </div>
 
                         <button class="addTobasket" onclick="addToCart(@Model.ProductId, document.getElementById('product-quantity').value)">Add to basket</button>
@@ -172,13 +175,13 @@
 
                         if (totalwishlistitems == null)
                         {
-                            <button class="notify-btn addTobasket notification-bell_@ViewBag.BaseProductId" onclick="AddWishListItemStockNotAvailable(@ViewBag.BaseProductId)">Notify</button>
-                            <a href="javascript:;" onclick="AddWishListItemStockNotAvailable(@ViewBag.BaseProductId)" class="addtowishlist bell-icon notification-bell_@ViewBag.BaseProductId"><i class="fa fa-bell-o list-icon" style="color:black"></i></a>
+                            <button class="notify-btn addTobasket notification-bell_@Model.ProductId" onclick="AddWishListItemStockNotAvailable(@Model.ProductId)">Notify</button>
+                            <a href="javascript:;" onclick="AddWishListItemStockNotAvailable(@Model.ProductId)" class="addtowishlist bell-icon notification-bell_@Model.ProductId"><i class="fa fa-bell-o list-icon" style="color:black"></i></a>
                         }
                         else
                         {
-                            <button class="notify-btn addTobasket notification-bell_@ViewBag.BaseProductId" onclick="removeNotifyProduct(@ViewBag.BaseProductId,true)">Notify</button>
-                            <a href="javascript:;" onclick="removeNotifyProduct(@ViewBag.BaseProductId,true)" class="addtowishlist bell-icon notification-bell_@ViewBag.BaseProductId"><i class="fa fa-bell-o list-icon" style="color:red"></i></a>
+                            <button class="notify-btn addTobasket notification-bell_@Model.ProductId" onclick="removeNotifyProduct(@Model.ProductId,true)">Notify</button>
+                            <a href="javascript:;" onclick="removeNotifyProduct(@Model.ProductId,true)" class="addtowishlist bell-icon notification-bell_@Model.ProductId"><i class="fa fa-bell-o list-icon" style="color:red"></i></a>
 
                         }
 
@@ -186,13 +189,13 @@
 
                     @if (Model.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && !u.IsNotification) == null)
                     {
-                        <button id="wish_@ViewBag.BaseProductId" onclick="AddToWishList(@ViewBag.BaseProductId,false)" class="addtowishlistbtn">Add to Wishlist</button>
-                        <a href="javascript:;" class="addtowishlist" id="wish_@ViewBag.BaseProductId" onclick="AddToWishList(@ViewBag.BaseProductId,false)"><i class="icon-love list-icon" style="color:black;font-size:28px"></i></a>
+                        <button id="wish_@Model.ProductId" onclick="AddToWishList(@Model.ProductId,false)" class="addtowishlistbtn">Add to Wishlist</button>
+                        <a href="javascript:;" class="addtowishlist" id="wish_@Model.ProductId" onclick="AddToWishList(@Model.ProductId,false)"><i class="icon-love list-icon" style="color:black;font-size:28px"></i></a>
                     }
                     else
                     {
-                        <button id="wish_@ViewBag.BaseProductId" onclick="RemoveWishListPopUp(@ViewBag.BaseProductId,false)" class="addtowishlistbtn">Add to Wishlist</button>
-                        <a href="javascript:;" class="addtowishlist" id="wish_@ViewBag.BaseProductId" onclick="RemoveWishListPopUp(@ViewBag.BaseProductId,false)"><i class="icon-love list-icon" style="color:red;font-size:28px"></i></a>
+                        <button id="wish_@Model.ProductId" onclick="RemoveWishListPopUp(@Model.ProductId,false)" class="addtowishlistbtn">Add to Wishlist</button>
+                        <a href="javascript:;" class="addtowishlist" id="wish_@Model.ProductId" onclick="RemoveWishListPopUp(@Model.ProductId,false)"><i class="icon-love list-icon" style="color:red;font-size:28px"></i></a>
                     }
                 </div>
                 </div>
