--- a/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/list.cshtml
@@ -96,17 +96,15 @@
                                         {
                                             <ul class="icolist">
 
-                                                @if (item.SellPrice > 0 && item.SellPrice.HasValue && @item.PercentMargin > 0 && item.ProductType != ProductKitTypeEnum.ProductByAttribute)
+                                                @if (item.SellPrice > 0 && item.SellPrice.HasValue && @item.PercentMargin > 0 && item.ProductType != ProductKitTypeEnum.ProductByAttribute && Ganedata.Core.Services.Inventory.GetStockDetailByProductId(@item.ProductId) > 0)
                                                 {
-                                                    if (item.InventoryStocks.Sum(i => i.Available) > 0)
-                                                    {
                                                         <li>
                                                             <a href="javascript:;" onclick="addToCart(@item.ProductId)"><i class="icon-shopping-cart"></i></a>
                                                         </li>
-                                                    }
+                                                    
 
                                                 }
-                                                else if (@item.SellPrice > 0 && @item.SellPrice.HasValue && @item.PercentMargin > 0 && item.ProductType == ProductKitTypeEnum.ProductByAttribute)
+                                                else if (@item.SellPrice > 0 && item.SellPrice.HasValue && @item.PercentMargin > 0 && item.ProductType == ProductKitTypeEnum.ProductByAttribute && Ganedata.Core.Services.Inventory.GetStockDetailByProductId(@item.ProductId) > 0)
                                                 {
                                                     <li>
                                                         <a href="javascript:;" onclick="showProductByAttributeSelector('@item.SKUCode')"><i class="icon-shopping-cart"></i></a>
