--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3615,17 +3615,24 @@ body {
     box-shadow: 0px 0px 23px 2px #d8d8d8;
     display: inline-block;
     margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.nb_feat_prod_sec .nb_featuredPrdCarrousle .nb_fp_boxwrap .prd_img{
+    margin-bottom: 0;
 }
 
 .nb_top_catSection .accordion h2 {
     font-style: normal;
 }
-@media(max-with:364px){
-.feature-product-overflow {
-        overflow:hidden;
+
+@media(max-with:364px) {
+    .feature-product-overflow {
+        overflow: hidden;
     }
 }
-@media(max-width:560px){
+
+@media(max-width:560px) {
     .billandshipsec .checkout-options-wrapper .addnwShopAdrrbtn {
         margin: unset;
         margin-bottom: -12px;
