--- a/WarehouseEcommerce/Views/Theme/University/Orders/_ShipmentRule.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_ShipmentRule.cshtml
@@ -17,8 +17,8 @@
         </div>
     }
     <div class="btnWrap">
-        <a href="javascript:;" class="addnwShopAdrrbtn" onclick="chooseShippingRule(@((int)CheckoutStep.BillingAddress))">SELECT SHIPMENT TYPE</a>&nbsp;
-        <a href="@Url.Action("GoToPreviousStep","orders")" class="btmBtn addnwShopAdrrbtn">Back</a>
+        <a href="javascript:;" class="addnwShopAdrrbtn payment-type-btns" onclick="chooseShippingRule(@((int)CheckoutStep.BillingAddress))">SELECT SHIPMENT TYPE</a>&nbsp;
+        <a href="@Url.Action("GoToPreviousStep","orders")" class="btmBtn addnwShopAdrrbtn payment-type-btns">Back</a>
 
     </div>
 </div>
