--- a/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/ProductDetails.cshtml
@@ -176,12 +176,12 @@
                         if (totalwishlistitems == null)
                         {
                             <button class="notify-btn addTobasket notification-bell_@Model.ProductId" onclick="AddWishListItemStockNotAvailable(@Model.ProductId)">Notify</button>
-                            <a href="javascript:;" onclick="AddWishListItemStockNotAvailable(@Model.ProductId)" class="addtowishlist bell-icon notification-bell_@Model.ProductId"><i class="fa fa-bell-o list-icon" style="color:black"></i></a>
+                            <a href="javascript:;" onclick="AddWishListItemStockNotAvailable(@Model.ProductId)" class="addtowishlist list-icon bell-icon notification-bell_@Model.ProductId"><i class="fa fa-bell-o list-icon" style="color:black"></i></a>
                         }
                         else
                         {
                             <button class="notify-btn addTobasket notification-bell_@Model.ProductId" onclick="removeNotifyProduct(@Model.ProductId,true)">Notify</button>
-                            <a href="javascript:;" onclick="removeNotifyProduct(@Model.ProductId,true)" class="addtowishlist bell-icon notification-bell_@Model.ProductId"><i class="fa fa-bell-o list-icon" style="color:red"></i></a>
+                            <a href="javascript:;" onclick="removeNotifyProduct(@Model.ProductId,true)" class="addtowishlist list-icon bell-icon notification-bell_@Model.ProductId"><i class="fa fa-bell-o list-icon" style="color:red"></i></a>
 
                         }
 
@@ -189,12 +189,12 @@
 
                     @if (Model.WebsiteWishListItems.FirstOrDefault(u => u.IsDeleted != true && !u.IsNotification) == null)
                     {
-                        <button id="wish_@Model.ProductId" onclick="AddToWishList(@Model.ProductId,false)" class="addtowishlistbtn">Add to Wishlist</button>
-                        <a href="javascript:;" class="addtowishlist" id="wish_@Model.ProductId" onclick="AddToWishList(@Model.ProductId,false)"><i class="icon-love list-icon" style="color:black;font-size:28px"></i></a>
+                        <button id="btnwish_@Model.ProductId" onclick="AddToWishList(@Model.ProductId,false)" class="addtowishlistbtn">Add to Wishlist</button>
+                        <a href="javascript:;" class="addtowishlist " id="wish_@Model.ProductId" onclick="AddToWishList(@Model.ProductId,false)"><i class="icon-love list-icon" style="color:black;font-size:28px"></i></a>
                     }
                     else
                     {
-                        <button id="wish_@Model.ProductId" onclick="RemoveWishListPopUp(@Model.ProductId,false)" class="addtowishlistbtn">Add to Wishlist</button>
+                        <button id="btnwish_@Model.ProductId" onclick="RemoveWishListPopUp(@Model.ProductId,false)" class="addtowishlistbtn">Add to Wishlist</button>
                         <a href="javascript:;" class="addtowishlist" id="wish_@Model.ProductId" onclick="RemoveWishListPopUp(@Model.ProductId,false)"><i class="icon-love list-icon" style="color:red;font-size:28px"></i></a>
                     }
                 </div>
