--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_CartItemsPartial.cshtml
@@ -27,10 +27,10 @@
                 </div>
             </div>
             <div class="cartitem-price">
-                <p><span>Price:</span><b>@item.CurrencySign@item.Price</b></p>
+                <p><span>Price:</span><b>@ViewBag.CurrencySymbol@item.Price</b></p>
                 @*@Html.Hidden("cartView", true);*@
-                @*<p><span>Tax:</span><b>@item.CurrencySign@item.TaxAmount</b></p>*@
-                <p><span>Total:</span><b>@item.CurrencySign@item.TotalAmount</b></p>
+                @*<p><span>Tax:</span><b>@ViewBag.CurrencySymbol@item.TaxAmount</b></p>*@
+                <p><span>Total:</span><b>@ViewBag.CurrencySymbol@item.TotalAmount</b></p>
             </div>
         </div>
 
