--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_OnSalePartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_OnSalePartial.cshtml
@@ -48,7 +48,7 @@
                                         <div class="caption ">
                                             <h4><a title="@product[i].Name" href="@Url.Action("ProductDetails","Products", new { sku= product[i].SKUCode })"> @product[i].Name</a></h4>
                                             <p class="price">
-                                                @Model.CurrencySign @product[i].SellPrice
+                                                @ViewBag.CurrencySymbol@product[i].SellPrice
 
                                             </p>
                                             <div class="rating">
@@ -110,7 +110,7 @@
                                         <div class="caption ">
                                             <h4><a data-toggle="tooltip" title="@product[i + 1].Name" href="@Url.Action("ProductDetails","Products", new { sku= product[i+1].SKUCode })"> @product[i + 1].Name</a></h4>
                                             <p class="price">
-                                                @Model.CurrencySign @(product[i + 1].SellPrice)
+                                                @ViewBag.CurrencySymbol@(product[i + 1].SellPrice)
 
                                             </p>
                                             <div class="rating">
