--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_SpecialProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_SpecialProductPartial.cshtml
@@ -39,7 +39,7 @@
                                             </a>
                                         </h4>
                                         <p class="price">
-                                            @Model.CurrencySign @Model.productMasterList[i].SellPrice
+                                            @ViewBag.CurrencySymbol@Model.productMasterList[i].SellPrice
                                         </p>
                                         <div class="rating">
                                             <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
@@ -84,7 +84,7 @@
                                     <div class="caption">
                                         <h4><a title="@Model.productMasterList[i + 1].Name" href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i+1].SKUCode })"> @Model.productMasterList[i + 1].Name</a></h4>
                                         <p class="price">
-                                            @Model.CurrencySign @Model.productMasterList[i + 1].SellPrice
+                                            @ViewBag.CurrencySymbol@Model.productMasterList[i + 1].SellPrice
                                         </p>
                                         <div class="rating">
                                             <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
@@ -129,7 +129,7 @@
                                     <div class="caption">
                                         <h4><a title="@Model.productMasterList[i + 2].Name" href="@Url.Action("ProductDetails","Products", new { sku= Model.productMasterList[i+2].SKUCode })">@Model.productMasterList[i + 2].Name</a></h4>
                                         <p class="price">
-                                            @Model.CurrencySign@Model.productMasterList[i + 2].SellPrice
+                                            @ViewBag.CurrencySymbol@Model.productMasterList[i + 2].SellPrice
                                         </p>
                                         <div class="rating">
                                             <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
