--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopProductPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopProductPartial.cshtml
@@ -59,7 +59,7 @@
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                                 <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
                                             </div>
-                                            <p class="price text-right">@Model.CurrencySign @item.SellPrice</p>
+                                            <p class="price text-right">@ViewBag.CurrencySymbol@item.SellPrice</p>
                                         </div>
                                         <div class="clearfix"></div>
                                         <div class="button-group">
@@ -75,7 +75,7 @@
                                                     <span>Add to Basket</span>
                                                 </button>
                                             }
-                                           
+
                                         </div>
                                     </div>
                                 </div>
