hide zoom panel for mobile, in product detail page Imported from Changeset 2804

--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3697,6 +3697,15 @@ body {
         top: 100%;
         background-color: #fff;
     }
+
+    .nb_prd_viewingsecWrap #zoomViewTrigger {
+        display: none;
+    }
+
+    .zoomLens,
+    .zoomWindow {
+        display: none !important;
+    }
 }
 
 @media (max-width: 480px) {
