Added Opacity option to the slider text background color Imported from Changeset 2805

--- a/WMS/Views/Theme/Default/WebsiteSliders/Delete.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/Delete.cshtml
@@ -76,6 +76,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ForeColorOpacity)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ForeColorOpacity)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.SortOrder)
         </dt>
 
