--- a/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
@@ -26,6 +26,7 @@
         settings.Columns.Add("ButtonLinkUrl");
         settings.Columns.Add("TextColor");
         settings.Columns.Add("ForeColor");
+        settings.Columns.Add("ForeColorOpacity");
         settings.Columns.Add(c =>
         {
             c.FieldName = "SortOrder";
