--- a/WMS/Views/Theme/Default/WebsiteSliders/Details.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/Details.cshtml
@@ -75,6 +75,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ForeColorOpacity)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ForeColorOpacity)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.SortOrder)
         </dt>
 
