--- a/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/Site.css
@@ -3795,3 +3795,12 @@ body {
     }
 }
 /*feacture product img -end*/
+@media (max-width: 480px) {
+    .nb_top_catSection .accordion ul li {
+        width: 120px !important;
+        height: 120px !important
+    }
+    .nb_top_catSection .accordion ul li div a {
+        height: 130px;
+    }
+}
